--- a/src/main/webapp/resources/css/estilo.css
+++ b/src/main/webapp/resources/css/estilo.css
@@ -4,10 +4,11 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
 /* 
-    Created on : 21/10/2018, 22:53:34
+    Created on : 07/11/2018, 10:44:19
     Author     : joaon
 */
 
-h1 {
-    text-align: center;
+body {
+    padding-top: 80px;
+    padding-bottom: 20px;
 }
